--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="bundle.js" type="text/javascript" charset="utf-8" defer></script>
   </head>
   <body class="container-fluid">
-    <button id="getBooksButton" class="btn btn-default">Get Books!</button>
+    <button id="getBooksButton" class="btn btn-default test-button">Get Books!</button>
+    <button id="getTitlesButton" class="btn btn-default">Get Titles!</button>
     <button id="clearBooksButton" class="btn btn-default">Clear Books!</button>
     <div id="content" class="content">
     </div>
